--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "job-queue",
   "version": "1.0.0",
   "description": "Job queue",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d .",
-    "watch": "babel -w src -d ."
+    "build": "babel src -d dist",
+    "watch": "babel -w src -d dist",
+    "start": "node ./dist/server.js"
   },
   "author": "Carroll Yu",
   "license": "ISC",
