--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Job queue",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node dist/test.js",
     "build": "babel src -d dist",
     "watch": "babel -w src -d dist",
     "start": "node ./dist/server.js"
