integrate real queue system into fetch process

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.4.19",
+    "rsmq": "^0.7.0",
     "superagent": "^2.0.0-alpha.3"
   },
   "devDependencies": {
