--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Job queue",
   "main": "dist/server.js",
   "scripts": {
-    "test": "node dist/test.js",
+    "test": "mocha dist/test/test.js",
     "build": "babel src -d dist",
     "watch": "babel -w src -d dist",
     "start": "node ./dist/server.js"
@@ -24,6 +24,8 @@
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
+    "sinon": "^1.17.4"
   }
 }
