--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
+    "mocha": "^2.5.3",
     "sinon": "^1.17.4"
   }
 }
