--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "mocha dist/test/test.js",
-    "build": "babel src -d dist",
-    "watch": "babel -w src -d dist",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "webpack",
+    "build:server": "babel src -d dist",
+    "watch:client": "webpack -w",
+    "watch:server": "babel -w src -d dist",
     "start": "node ./dist/server.js"
   },
   "author": "Carroll Yu",
@@ -16,16 +19,22 @@
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.4.19",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "rsmq": "^0.7.0",
     "rsmq-worker": "^0.4.2",
-    "superagent": "^2.0.0-alpha.3"
+    "superagent": "^2.0.0-alpha.3",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "chai": "^3.5.0",
-    "sinon": "^1.17.4"
+    "sinon": "^1.17.4",
+    "webpack": "^1.13.1"
   }
 }
